// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About should render correctly when vw is large 1`] = `
<div
  className="container"
>
  <div
    className="image"
  />
  <span
    style={
      Object {
        "display": "flex",
        "width": "7.8rem",
      }
    }
  />
  <div
    className="content"
  >
    <h4
      className="heading"
    >
      Bringing you the 
      <span
        className="brick_word"
      >
        best 
      </span>
      audio gear
    </h4>
    <span
      style={
        Object {
          "display": "flex",
          "height": "2rem",
        }
      }
    />
    <p
      className="about_us"
    >
      Located at the heart of New York City, Audiophile is the premier store for high end headphones, earphones, speakers, and audio accessories. We have a large showroom and luxury demonstration rooms available for you to browse and experience a wide range of our products. Stop by our store to meet some of the fantastic people who make Audiophile the best place to buy your portable audio equipment.
    </p>
  </div>
</div>
`;

exports[`About should render correctly when vw is medium or greater 1`] = `
<div
  className="container"
>
  <div
    className="image"
  />
  <span
    style={
      Object {
        "display": "flex",
        "height": "2rem",
      }
    }
  />
  <div
    className="content"
  >
    <h4
      className="heading"
    >
      Bringing you the 
      <span
        className="brick_word"
      >
        best 
      </span>
      audio gear
    </h4>
    <span
      style={
        Object {
          "display": "flex",
          "height": "2rem",
        }
      }
    />
    <p
      className="about_us"
    >
      Located at the heart of New York City, Audiophile is the premier store for high end headphones, earphones, speakers, and audio accessories. We have a large showroom and luxury demonstration rooms available for you to browse and experience a wide range of our products. Stop by our store to meet some of the fantastic people who make Audiophile the best place to buy your portable audio equipment.
    </p>
  </div>
</div>
`;

exports[`About should render correctly when vw is small or less 1`] = `
<div
  className="container"
>
  <div
    className="image"
  />
  <span
    style={
      Object {
        "display": "flex",
        "height": "2rem",
      }
    }
  />
  <div
    className="content"
  >
    <h4
      className="heading"
    >
      Bringing you the 
      <span
        className="brick_word"
      >
        best 
      </span>
      audio gear
    </h4>
    <span
      style={
        Object {
          "display": "flex",
          "height": "2rem",
        }
      }
    />
    <p
      className="about_us"
    >
      Located at the heart of New York City, Audiophile is the premier store for high end headphones, earphones, speakers, and audio accessories. We have a large showroom and luxury demonstration rooms available for you to browse and experience a wide range of our products. Stop by our store to meet some of the fantastic people who make Audiophile the best place to buy your portable audio equipment.
    </p>
  </div>
</div>
`;
